# pills-core

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml  pytest.ini
.github/workflows/: tests.yaml
pills_core/: _computer_registry.py  _enums.py  _infer_types.py  analyzer_rules.py  analyzers.py  config.py  exceptions.py  explain.py  inspector.py  monitoring.py  rules.py  stats_computer.py
pills_core/calculations/: fill_fn.py  numeric.py  score_fn.py
pills_core/descriptors/: base.py
pills_core/descriptors/column/: boolean.py  column.py  numeric.py
pills_core/descriptors/column/categorical/: base.py
pills_core/descriptors/dataset/: dataset.py
pills_core/engine/: _base.py
pills_core/ingestion/: base.py  csv.py
pills_core/pipeline/: base.py  builder.py  context.py  numeric.py  pipeline.py  profiler.py  sequence.py  step.py  trace.py
pills_core/splitting/: base.py  cv.py  holdout.py  spec.py
pills_core/strategies/: base.py  config.py  priorities.py  registry.py  resolver.py  score.py  util.py
pills_core/strategies/categorical/: base.py  imputation.py
pills_core/strategies/numeric/: _registry.py  base.py  imputation.py  outliers.py  scaling.py
pills_core/types/: profiles.py  stats.py
tests/: test_csv_ingestion.py  test_resolver.py  test_strategy_config.py
