[project]
name = "pills-core"
version = "0.1.0"
description = ""
authors = [
    {name = "xifOO",email = "wedyi28111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)"
]
