[project]
name = "pills-core"
version = "0.1.0"
description = ""
authors = [
    {name = "xifOO",email = "wedyi28111@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.5,<0.16.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "typing-extensions (>=4.15.0,<5.0.0)"
]


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "I",
  "B",
  "A",
  "C4",
  "S",
]
ignore = ["B904"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
